# bluebottle

./: Cargo.toml  DESIGN.md  README.md  justfile
bluebottle/: Cargo.toml
bluebottle-theme/: Cargo.toml
bluebottle-theme/examples/: showcase.rs
bluebottle-theme/src/: dark.rs  lib.rs
bluebottle-ui/: Cargo.toml  README.md  build.rs
bluebottle-ui/assets/MaterialIcons/: MaterialIcons-Regular.codepoints
bluebottle-ui/examples/: components.rs
bluebottle-ui/src/: color.rs  colour.rs  easing.rs  font.rs  icon.rs  lib.rs  util.rs
bluebottle-ui/src/widget/: bar.rs  button.rs  card.rs  carousel_navigator.rs  debug.rs  ellipsis_text.rs  image.rs  input.rs  mod.rs  pill.rs  pill_box.rs  rating.rs  scrollable.rs  search.rs  separator.rs  separators.rs  skeleton.rs  text.rs  title.rs
bluebottle-ui/src/widget/spinner/: circular.rs  linear.rs  mod.rs
bluebottle/src/: app.rs  main.rs  navigator.rs  view.rs
bluebottle/src/backends/: http.rs  mod.rs
bluebottle/src/backends/jellyfin/: auth.rs  mod.rs
bluebottle/src/components/: jellyfin_onboard.rs  mod.rs
bluebottle/src/models/: media.rs
bluebottle/src/screen/: library_select.rs  library_view.rs  loading.rs  mod.rs  settings.rs  setup.rs
bluebottle/src/storage/: asset_cache.rs  cache.rs  content_cache.rs  directory.rs  durable.rs  mod.rs  relaxed.rs  state.rs
bluebottle/src/storage/tables/: durable_init.sql  relaxed_init.sql  system_state.sql
src/: main.rs
