[workspace]
resolver = "3"
members = [
    "bluebottle",
    "bluebottle-ui",
]

[workspace.dependencies]
palette = "0.7"
lyon_algorithms = "1"
anyhow = "1"
foldhash = "0.2"
phf = "0.13"
phf_codegen = "0.13"
humantime = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

# 3rd party widgets
iced_palace = "0.14"

iced = { version = "0.14", default-features = false, features = ["crisp", "wayland", "x11", "wgpu", "advanced", "tokio", "image", "svg", "canvas"] }
