[workspace]
resolver = "3"
members = [
    "bluebottle",
    "bluebottle-ui",
]

[workspace.dependencies]
palette = "0.7"
lyon_algorithms = "1"
foldhash = "0.2"
phf = "0.13"
phf_codegen = "0.13"
humantime = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
serde = "1"
serde_derive = "1"
serde_json = "1"
rmp-serde = "1"
snafu = "0.8"
blake3 = "1"
directories = "6"
parking_lot = "0.12"
lru = "0.16"
arrayvec = "0.7"
tempfile = "3"

# 3rd party widgets
iced_palace = "0.14"

uuid = { version = "1", features = ["v7"] }
url = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["net", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls", "rustls-tls-native-roots", "json", "zstd"] }
iced = { version = "0.14", default-features = false, features = ["crisp", "wayland", "x11", "wgpu", "advanced", "tokio", "image", "svg", "canvas", "sipper"] }
rusqlite = { version = "0.38", features = ["bundled", "serde_json", "uuid"] }

# Dev dependencies
rstest = "0.26"
