[package]
name = "bluebottle-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true }
phf = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[build-dependencies]
phf = { workspace = true }
phf_codegen = { workspace = true }

[[example]]
name = "components"