[package]
name = "bluebottle-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true }
iced_palace = { workspace = true }
phf = { workspace = true }
lyon_algorithms = { workspace = true }

[dev-dependencies]
snafu = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
phf = { workspace = true }
phf_codegen = { workspace = true }

[[example]]
name = "components"