[package]
name = "bluebottle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iced = { workspace = true }
url = { workspace = true }
clap = { workspace = true }

bluebottle-ui = { path = "../bluebottle-ui" }