[package]
name = "bluebottle"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iced = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }

bluebottle-ui = { path = "../bluebottle-ui" }